--- a/project1/src/main/webapp/WEB-INF/web.xml
+++ b/project1/src/main/webapp/WEB-INF/web.xml
@@ -48,7 +48,7 @@
 	</filter-mapping>
 	
 	<welcome-file-list>
-		<welcom-file>index.p1</welcom-file>
+		<welcome-file>index.p1</welcome-file>
 	</welcome-file-list>
 
 </web-app>
